syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";

option go_package = "grpc-demo/gen/user/v1";

service UserService {
    // Получить пользователя по ID
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    
    // Получить список пользователей
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    
    // Создать пользователя
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

// ============ Requests ============

message GetUserRequest {
    string id = 1;
}

message ListUsersRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    int32 age = 3;
}

// ============ Responses ============

message GetUserResponse {
    User user = 1;
}

message ListUsersResponse {
    repeated User users = 1;
    int32 total = 2;
}

message CreateUserResponse {
    User user = 1;
}

// ============ Models ============

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
    google.protobuf.Timestamp created_at = 5;
}

